WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157405
Don't use DiskCache for media resource loads
https://bugs.webkit.org/show_bug.cgi?id=157405
Summary
Don't use DiskCache for media resource loads
Alex Christensen
Reported
2016-05-05 18:58:58 PDT
Don't use DiskCache for media resource loads
Attachments
Patch
(10.16 KB, patch)
2016-05-05 19:00 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2016-05-05 19:00:53 PDT
Created
attachment 278217
[details]
Patch
WebKit Commit Bot
Comment 2
2016-05-05 19:03:26 PDT
Attachment 278217
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/network/ResourceRequestBase.h:153: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3
2016-05-09 09:53:51 PDT
Comment on
attachment 278217
[details]
Patch Clearing flags on attachment: 278217 Committed
r200578
: <
http://trac.webkit.org/changeset/200578
>
WebKit Commit Bot
Comment 4
2016-05-09 09:53:54 PDT
All reviewed patches have been landed. Closing bug.
Carlos Garcia Campos
Comment 5
2016-05-23 03:01:00 PDT
Comment on
attachment 278217
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=278217&action=review
> Source/WebCore/loader/MediaResourceLoader.cpp:67 > + auto cachingPolicy = options & LoadOption::DisallowCaching ? CachingPolicy::DisallowCaching : CachingPolicy::AllowCaching;
I'm confused. This is not about disk cache, but about memory cache, right? Why is this added as an option? Why not passing CachingPolicy::DisallowCaching unconditionally for media loads? Looking at the code below we disallow caching in the disk cache always for media requests.
Alex Christensen
Comment 6
2016-05-31 23:51:24 PDT
(In reply to
comment #5
)
> Comment on
attachment 278217
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=278217&action=review
> > > Source/WebCore/loader/MediaResourceLoader.cpp:67 > > + auto cachingPolicy = options & LoadOption::DisallowCaching ? CachingPolicy::DisallowCaching : CachingPolicy::AllowCaching; > > I'm confused. This is not about disk cache, but about memory cache, right? > Why is this added as an option? Why not passing > CachingPolicy::DisallowCaching unconditionally for media loads? Looking at > the code below we disallow caching in the disk cache always for media > requests.
This just translates one place where we store the caching policy to another place where we store the same policy. These are indeed about the memory cache, and we did it this way to not touch GTK/GStreamer's caching policy. The disk cache is disabled by the uses of WebCore::ResourceRequest::Requester::Media in NetworkCache.cpp. We do not want to use WebKit's caches right now because we are using AVFoundation's caches.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug