Don't use DiskCache for media resource loads https://bugs.webkit.org/show_bug.cgi?id=157405

Patch by Alex Christensen <achristensen@webkit.org> on 2016-05-09
Reviewed by Darin Adler.

Source/WebCore:

http/tests/security/video-cross-origin-caching.html was loading from the disk cache.
This patch adds an assertion that fires in that test without this fix.

* loader/MediaResourceLoader.cpp:
(WebCore::MediaResourceLoader::requestResource):
* platform/graphics/PlatformMediaResourceLoader.h:
* platform/network/ResourceRequestBase.h:
(WebCore::ResourceRequestBase::hiddenFromInspector):
(WebCore::ResourceRequestBase::setHiddenFromInspector):
(WebCore::ResourceRequestBase::requester):
(WebCore::ResourceRequestBase::setRequester):
* platform/network/cocoa/WebCoreNSURLSession.mm:
(-[WebCoreNSURLSessionDataTask _restart]):
(-[WebCoreNSURLSessionDataTask resource:receivedResponse:]):

Source/WebKit2:

* NetworkProcess/cache/NetworkCache.cpp:
(WebKit::NetworkCache::makeRetrieveDecision):
(WebKit::NetworkCache::makeStoreDecision):
* NetworkProcess/cache/NetworkCache.h:
* NetworkProcess/cache/NetworkCacheStatistics.cpp:
(WebKit::NetworkCache::retrieveDecisionToDiagnosticKey):

Canonical link: https://commits.webkit.org/175609@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200578 268f45cc-cd09-0410-ab3c-d52691b4dbfc